# aurora_bmi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
aurora/: __init__.py
aurora/core/: __init__.py  config.py  constants.py  exceptions.py  types.py
aurora/dashboard/: __init__.py  app.py
aurora/dashboard/components/: __init__.py  band_indicator.py  feature_breakdown.py  score_card.py
aurora/dashboard/pages/: __init__.py
aurora/explain/: __init__.py  generator.py  templates.py
aurora/features/: __init__.py  aggregator.py  ipb.py  ipo.py  ma_breadth.py  sbc.py  vpb.py
aurora/ingest/: __init__.py  base.py  cache.py  fmp.py  polygon.py  unusual_whales.py
aurora/normalization/: __init__.py  methods.py  pipeline.py  rolling.py
aurora/pipeline/: __init__.py  daily.py
aurora/scoring/: __init__.py  composite.py  engine.py
aurora/universe/: __init__.py  builder.py
config/: bands.yaml  normalization.yaml  settings.yaml
scripts/: __init__.py  aurora-daily.service  aurora-daily.timer  aurora-dashboard.service  deploy_linux.sh  diagnose_api.py  import_baseline.py  run_daily.py
secrets/: DEPLOY_LINUX_o.md
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_ipb.py  test_ipo.py  test_normalization.py  test_scoring.py  test_vpb.py
